--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+bcrypt==3.1.3
+cffi==1.11.1
 click==6.7
 Flask==0.12.2
+Flask-Bcrypt==0.7.1
 Flask-MySQL==1.4.0
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+pycparser==2.18
 PyMySQL==0.7.11
+six==1.11.0
 Werkzeug==0.12.2
