--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+APScheduler==3.3.1
+BareNecessities==0.2.8
 bcrypt==3.1.3
+blinker==1.4
 cffi==1.11.1
 click==6.7
 Flask==0.12.2
 Flask-Bcrypt==0.7.1
+Flask-Mail==0.9.1
 Flask-MySQL==1.4.0
-gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
+Mail==2.1.0
 MarkupSafe==1.0
 pycparser==2.18
 PyMySQL==0.7.11
+pytz==2017.2
 six==1.11.0
+tzlocal==1.4
 Werkzeug==0.12.2
